--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | bibo</title>
+    <title>Unity WebGL Player | fuck</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">bibo</div>
+        <div id="unity-build-title">fuck</div>
       </div>
     </div>
     <script>
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/bibo build.loader.js";
+      var loaderUrl = buildUrl + "/fuck build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/bibo build.data.br",
-        frameworkUrl: buildUrl + "/bibo build.framework.js.br",
-        codeUrl: buildUrl + "/bibo build.wasm.br",
+        dataUrl: buildUrl + "/fuck build.data",
+        frameworkUrl: buildUrl + "/fuck build.framework.js",
+        codeUrl: buildUrl + "/fuck build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "bibo",
-        productVersion: "1.0",
+        productName: "fuck",
+        productVersion: "0.1",
         showBanner: unityShowBanner,
       };
 
